--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.css">
     <title>Japansk Karry</title>
 </head>
 <body>
     <header>
         <h1>Opskrift på klassisk japansk karry</h1>
-        <img src="images/curry.png">
+            <img src="./images/curry.png"
+            width="1000"
+            height="400" />
         <h2>Nem og lækker japansk med oksekød og grøntsager</h2>
     </header>
     <!-- Introduktion til opskriften -->
@@ -18,6 +21,26 @@
         En simpel men varmende og umamifyldt ret som du med garanti er stødt på, hvis du har været i Japan.
         Denne opskrift er en af de mest klassiske versioner, som er udviklet af S&B, der også laver den mest solgte karry i hele Japan.
         Et lille tip inden du begynder på retten: Hvis du sætter dine ris over som det første, bør det passe med at risene er klar, når du er færdig med din karryret :) </p>
+    <!-- Ingredienser til opskriften -->
+    <h3>Ingredienser til 4-5 portioner</h3>
+        <ul>
+            <li>450g oksekød</li>
+            <li>2 hakkede løg</li>
+            <li>1 gulerød</li>
+            <li>1 kartoffel</li>
+            <li>1 spsk olie</li>
+            <li>540 ml vand</li>
+            <li>1 pakke S&B Curry</li>
+        </ul>
+    <!-- Fremgangsmetode til opskriften -->
+    <h4>Fremgangsmetode</h4>
+        <ol>
+            <li>Stirfry kød og grøntsager med olie i en stor stegepande på medium varme i ca. 5 min.</li>
+            <li>Tilsæt vand og bring i kog. Reducer varmen, dæk og lad den småkoge, indtil ingredienserne er møre - ca. 15min.</li>
+            <li>Sluk for varmen, bræk S&B Golden Curry Sauce Mix i stykker og føj dem til stegepanden. Rør indtil karryblandingen er helt opløst.</li>
+            <li>Lad retten simre i ca. 5 min. under omrøring.</li>
+            <li>Serveres med varme, kogte ris.</li>
+        </ol>
 
 </body>
 </html>
