--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<p lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
     <title>Japansk Karry</title>
+    <link rel="icon" type="image/x-icon" href=".images/favicon.png">
 </head>
-<body>
+<p>
     <header>
         <h1>Opskrift på klassisk japansk karry</h1>
             <img src="./images/curry.png"
-            width="1000"
-            height="400" />
+            width="50%"
+            height="50%" />
         <h2>Nem og lækker japansk med oksekød og grøntsager</h2>
     </header>
     <!-- Introduktion til opskriften -->
-    <p>"Karee" eller "Curry" - retten udtales og staves på mange måder, men er oftest bare kendt som Japansk Karry. 
-        En helt speciel karrysovs som er unik for Japan, tilsat grøntsager og kød og serveret med ris. 
-        En simpel men varmende og umamifyldt ret som du med garanti er stødt på, hvis du har været i Japan.
-        Denne opskrift er en af de mest klassiske versioner, som er udviklet af S&B, der også laver den mest solgte karry i hele Japan.
+    <p>"Karee" eller "Curry" - retten udtales og staves på mange måder, men er oftest bare kendt som Japansk Karry. </p>
+        En helt speciel karrysovs som er unik for Japan, tilsat grøntsager og kød og serveret med ris. </p>
+        En simpel men varmende og umamifyldt ret som du med garanti er stødt på, hvis du har været i Japan. </p>
+        Denne opskrift er en af de mest klassiske versioner, som er udviklet af S&B, der også laver den mest solgte karry i hele Japan. </p>
         Et lille tip inden du begynder på retten: Hvis du sætter dine ris over som det første, bør det passe med at risene er klar, når du er færdig med din karryret :) </p>
     <!-- Ingredienser til opskriften -->
     <h3>Ingredienser til 4-5 portioner</h3>
