--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
     <title>Japansk Karry</title>
-    <link rel="icon" type="image/x-icon" href=".images/favicon.ico">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
 </head>
 <p>
     <header>
@@ -16,12 +16,15 @@
             height="50%" />
         <h2>Nem og lækker japansk med oksekød og grøntsager</h2>
     </header>
+    
     <!-- Introduktion til opskriften -->
     <p>"Karee" eller "Curry" - retten udtales og staves på mange måder, men er oftest bare kendt som Japansk Karry. </p>
         En helt speciel karrysovs som er unik for Japan, tilsat grøntsager og kød og serveret med ris. </p>
         En simpel men varmende og umamifyldt ret som du med garanti er stødt på, hvis du har været i Japan. </p>
         Denne opskrift er en af de mest klassiske versioner, som er udviklet af S&B, der også laver den mest solgte karry i hele Japan. </p>
         Et lille tip inden du begynder på retten: Hvis du sætter dine ris over som det første, bør det passe med at risene er klar, når du er færdig med din karryret :) </p>
+    
+
     <!-- Ingredienser til opskriften -->
     <h3>Ingredienser til 4-5 portioner</h3>
         <ul>
