--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="app.css">
     <title>Japansk Karry</title>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <style>
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <p>
     <header>
