--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<p lang="en">
+<p lang="da">
 <!-- sections, footer, hyperlinks, non copyright image, styling over i css -->
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
     <title>Japansk Karry</title>
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico" />
     <style>
         img {
             display: block;
