--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
     <title>Japansk Karry</title>
-    <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico" />
-    <style>
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
+    <link rel=“icon” href=”./favicon.ico” type=“image/x-icon”>
 </head>
 <p>
     <header>
@@ -22,6 +15,13 @@
             <img src="./images/curry.png"
             width="50%"
             height="50%" />
+                <style>
+                    img {
+                        display: block;
+                        margin-left: auto;
+                        margin-right: auto;
+                    }
+                </style>
         <h2>Nem og lækker japansk med oksekød og grøntsager</h2>
     </header>
     
