--- a/index.html
+++ b/index.html
@@ -8,22 +8,20 @@
         <title>Japansk Karry</title>
         <link rel=“icon” href=”./favicon.ico” type=“image/x-icon”>
     </head>
+    <body>
     <header>
         <h1>Opskrift på klassisk japansk karry</h1>
-            <img src="./images/curry.png"
-                width="70%"
-                height="70%" />
+            <img src="./images/curry.png" class="center"/>
                     <style>
                         img {
-                        display: block;
-                        margin-left: auto;
-                        margin-right: auto;
+                        max-width: 75%;
+                        height: auto;
                         }
                     </style>
         
     </header>
     <section id="introduktion">
-        <h2>Nem og lækker japansk med oksekød og grøntsager</h2>
+        <h1>Nem og lækker japansk med oksekød og grøntsager</h1>
             <p>"Karee" eller "Curry" - retten udtales og staves på mange måder, men er oftest bare kendt som Japansk Karry. 
             En helt speciel karrysovs som er unik for Japan, tilsat grøntsager og kød og serveret med ris. 
             En simpel men varmende og umamifyldt ret som du med garanti er stødt på, hvis du har været i Japan. 
@@ -32,19 +30,19 @@
             </p>
     </section>
     <section id="ingredienser">
-    <h3>Ingredienser til 4-5 portioner</h3>
+    <h1>Ingredienser til 4-5 portioner:</h1>
         <ul>
-            <li>450g oksekød</li>
-            <li>2 hakkede løg</li>
-            <li>1 gulerød</li>
-            <li>1 kartoffel</li>
-            <li>1 spsk olie</li>
-            <li>540 ml vand</li>
-            <li>1 pakke S&B Curry</li>
+            <li><b>450g oksekød</b></li>
+            <li><b>2 hakkede løg</b></li>
+            <li><b>1 gulerød</b></li>
+            <li><b>1 kartoffel</b></li>
+            <li><b>1 spsk olie</b></li>
+            <li><b>540 ml vand</b></li>
+            <li><b>1 pakke S&B Curry</b></li>
         </ul>
     </section>
     <section id="fremgangsmetode">
-    <h4>Fremgangsmetode</h4>
+    <h1>Fremgangsmetode:</h1>
         <ol>
             <li>Stirfry kød og grøntsager med olie i en stor stegepande på medium varme i ca. 5 min.</li>
             <li>Tilsæt vand og bring i kog. Reducer varmen, dæk og lad den småkoge, indtil ingredienserne er møre - ca. 15min.</li>
@@ -52,7 +50,8 @@
             <li>Lad retten simre i ca. 5 min. under omrøring.</li>
             <li>Serveres med varme, kogte ris.</li>
         </ol>
-    </section>    
+    </section> 
+    <section id="footer">  
         <footer>
             <iframe width="560" height="315" 
             src="https://www.youtube.com/embed/IM6h_alEKck" 
@@ -62,5 +61,6 @@
             allowfullscreen>
             </iframe>
                 <a href="https://wakuwaku.dk/blog/indlaeg/japansk-karryret-med-ris.html">Original opskrift fra Wakuwaku.dk</a></footer>
+    </section> 
     </body>
 </html>
