--- a/index.html
+++ b/index.html
@@ -9,58 +9,69 @@
         <link rel=“icon” href=”./favicon.ico” type=“image/x-icon”>
     </head>
     <body>
-    <header>
-        <h1>Opskrift på klassisk japansk karry</h1>
-            <img src="./images/curry.png" class="center"/>
+        <header>  
+            <h1>Opskrift på klassisk japansk karry</h1>
+                <img src="./images/curry.png" class="center"/>
                     <style>
                         img {
                         max-width: 75%;
                         height: auto;
                         }
                     </style>
-        
-    </header>
+        </header>
     <section id="introduktion">
         <h1>Nem og lækker japansk med oksekød og grøntsager</h1>
-            <p>"Karee" eller "Curry" - retten udtales og staves på mange måder, men er oftest bare kendt som Japansk Karry. 
+            <p> "Karee" eller "Curry" - retten udtales og staves på mange måder, men er oftest bare kendt som Japansk Karry. 
             En helt speciel karrysovs som er unik for Japan, tilsat grøntsager og kød og serveret med ris. 
             En simpel men varmende og umamifyldt ret som du med garanti er stødt på, hvis du har været i Japan. 
             Denne opskrift er en af de mest klassiske versioner, som er udviklet af S&B, der også laver den mest solgte karry i hele Japan. 
             Et lille tip inden du begynder på retten: Hvis du sætter dine ris over som det første, bør det passe med at risene er klar, når du er færdig med din karryret :) 
             </p>
     </section>
-    <section id="ingredienser">
-    <h1>Ingredienser til 4-5 portioner:</h1>
-        <ul>
-            <li><b>450g oksekød</b></li>
-            <li><b>2 hakkede løg</b></li>
-            <li><b>1 gulerød</b></li>
-            <li><b>1 kartoffel</b></li>
-            <li><b>1 spsk olie</b></li>
-            <li><b>540 ml vand</b></li>
-            <li><b>1 pakke S&B Curry</b></li>
-        </ul>
+    <div class="container">
+        <div class="img-col">
+            <a href="https://wakuwaku.dk/94-japansk-karry"><img src="./images/box.png"></a>
+        </div>
+        <div class="text-col">
+            <section id="ingredienser">
+                <h1>Ingredienser til 4-5 portioner: </h1>
+                    <ul>
+                        <li><b>450g oksekød </b></li>
+                        <li><b>2 hakkede løg</b></li>
+                        <li><b>1 gulerød</b></li>
+                        <li><b>1 kartoffel</b></li>
+                        <li><b>1 spsk olie</b></li>
+                        <li><b>540 ml vand</b></li>
+                        <li><b>1 pakke S&B Curry</b></li>
+                    </ul>
+        </div>
+    </div>
     </section>
-    <section id="fremgangsmetode">
-    <h1>Fremgangsmetode:</h1>
-        <ol>
-            <li>Stirfry kød og grøntsager med olie i en stor stegepande på medium varme i ca. 5 min.</li>
-            <li>Tilsæt vand og bring i kog. Reducer varmen, dæk og lad den småkoge, indtil ingredienserne er møre - ca. 15min.</li>
-            <li>Sluk for varmen, bræk S&B Golden Curry Sauce Mix i stykker og føj dem til stegepanden. Rør indtil karryblandingen er helt opløst.</li>
-            <li>Lad retten simre i ca. 5 min. under omrøring.</li>
-            <li>Serveres med varme, kogte ris.</li>
-        </ol>
-    </section> 
+    <div class="container">
+        <section id="fremgangsmetode">
+        <h1>Fremgangsmetode:</h1>
+            <ol>
+                <li>Stirfry kød og grøntsager med olie i en stor stegepande på medium varme i ca. 5 min.</li>
+                <li>Tilsæt vand og bring i kog. Reducer varmen, dæk og lad den småkoge, indtil ingredienserne er møre - ca. 15min.</li>
+                <li>Sluk for varmen, bræk S&B Golden Curry Sauce Mix i stykker og føj dem til stegepanden. Rør indtil karryblandingen er helt opløst.</li>
+                <li>Lad retten simre i ca. 5 min. under omrøring.</li>
+                <li>Serveres med varme, kogte ris.</li>
+            </ol>
+        </section> 
+    </div>
     <section id="footer">  
         <footer>
-            <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/IM6h_alEKck" 
+            <iframe
+            src="https://www.youtube.com/embed/IM6h_alEKck" class="video"
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen>
             </iframe>
-                <a href="https://wakuwaku.dk/blog/indlaeg/japansk-karryret-med-ris.html">Original opskrift fra Wakuwaku.dk</a></footer>
+                <a href="https://wakuwaku.dk/blog/indlaeg/japansk-karryret-med-ris.html">Original opskrift fra Wakuwaku.dk</a>               
     </section> 
+            <img src="./images/mom.png" onmouseover="this.src='./images/child.png'" onmouseout="this.src='./images/mom.png'" class="center"/>
+        </footer>
     </body>
 </html>
+<!-- hjemmesiden nydes bedst som et halv vindue i 16:9 aspect ratio -->
